--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 </div>
                 <div class="container__main__games__item">    
                     <div class="container__main__games__item__text">              
-                        <h2>CS:GO</h2>
+                        <h2>Apex</h2>
                         <hr>
-                        <p>Одна из лучших королевских битв. Наш клан всегда в топ 3.</p>
+                        <p>Если вы один из самых умалишённых игроков и лишились матери по папиной линии сестры в 5 лет, то вам зайдёт этот онлайн экшен мирового уровня :)):):):):):)</p>
                     </div>
                     <img src="./img/apex.jpg" alt="">  
                 </div>
